Fixed text overlapping header. #6

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 
 #header {
   position: fixed;
+  z-index: 99;
   top: 0;
   width: 100%;
   padding: 5px 10px 1px;
